[gd_scene load_steps=3 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://easy2deditor.gd" type="Script" id=2]

[node name="easy2deditor" type="Control"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 655.266, 329.109 )
scale = Vector2( 2.5542, 2.40967 )
texture = ExtResource( 1 )
region_rect = Rect2( -60, -10, 160, 40 )

[node name="pos" type="ToolButton" parent="Sprite"]
margin_left = -40.251
margin_top = -41.1239
margin_right = 37.749
margin_bottom = 38.8763

[node name="Scale" type="Node2D" parent="Sprite"]

[node name="UpRight" type="Button" parent="Sprite/Scale"]
margin_left = 32.2624
margin_top = -38.1687
margin_right = 64.2624
margin_bottom = -16.1687
rect_scale = Vector2( 0.6, 0.6 )
text = "1,0"

[node name="UpLeft" type="Button" parent="Sprite/Scale"]
margin_left = -37.019
margin_top = -36.5453
margin_right = -5.01901
margin_bottom = -14.5453
rect_scale = Vector2( 0.6, 0.6 )
text = "0,0"

[node name="DownRight" type="Button" parent="Sprite/Scale"]
margin_left = 31.7375
margin_top = 31.6347
margin_right = 63.7375
margin_bottom = 53.6347
rect_scale = Vector2( 0.6, 0.6 )
text = "1,1"

[node name="DownLeft" type="Button" parent="Sprite/Scale"]
margin_left = -37.2814
margin_top = 31.6347
margin_right = -5.28142
margin_bottom = 53.6347
rect_scale = Vector2( 0.6, 0.6 )
text = "0,1"

[node name="Label" type="Label" parent="."]
margin_left = 90.0
margin_top = 131.0
margin_right = 190.0
margin_bottom = 179.0
text = "mouse position
sprite position
sprite scale"

[node name="AltMode" type="CheckBox" parent="."]
margin_left = 66.0
margin_top = 102.0
margin_right = 112.0
margin_bottom = 126.0
text = "Press Alt"

[node name="qa" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 0.298039 )
position = Vector2( 338.6, 218.6 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="qb" type="Sprite" parent="."]
modulate = Color( 0.14902, 0, 1, 0.298039 )
position = Vector2( 338.6, 218.6 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )
